--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
     <h1 class="title">2023 신년계획</h1>
     <p class="msg">올해는 꼭 모두 지키자!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t5 center">서울</div>
-        <div class="bucket img2-t5 center">꿈</div>
-        <div class="bucket img2-t5 center">토익스피킹 160</div>
-        <div class="bucket img1-t5 center">플레이리스트</div>
-        <div class="bucket img1-t5 center">건강</div>
-        <div class="bucket img2-t5 center">따뜻한 물 습관 들이기</div>
+        <div class="bucket img1-t5 center">버킷리스트1</div>
+        <div class="bucket img2-t5 center">버킷리스트2</div>
+        <div class="bucket img2-t5 center">버킷리스트3</div>
+        <div class="bucket img1-t5 center">버킷리스트4</div>
+        <div class="bucket img1-t5 center">버킷리스트5</div>
+        <div class="bucket img2-t5 center">버킷리스트6</div>
     </div>
 
 </body>
